# keras-datasets

./: .coveragerc  .gitignore  .pyup.yml  .travis.yml  LICENSE  README.md  README.rst  export_requirements.bat  launchPython.bat  readme_mkdown_process.bat  requirements.txt  requirements_dev.txt  requirements_lib.txt  requirements_travis.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: _config.yml  index.md
docs/images/: logo.psd
keras_datasets/: __init__.py  data_utils.py  network_exceptions.py  utils.py
keras_datasets/dummy_image_dataset/: __init__.py
keras_datasets/tests/dummy_image_dataset/: test_dummy.py
keras_datasets/tests/ucf101/: test_ucf101.py
keras_datasets/ucf101/: __init__.py
misc/win/: OpenBatchPrompt.bat  compile_library.bat  install_dependencies.bat  launch_testing.bat  readme_mkdown_process.bat
source/: conf.py  index.rst
