[metadata]
description-file = README.md

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal = 1

[tool:pytest]

# PEP-8 The following are ignored:
# E221 multiple spaces before operator
# E225 missing whitespace around operator
# E226 missing whitespace around arithmetic operator
# E231 missing whitespace after ,
# E241 multiple spaces after ','
# E251 unexpected spaces around keyword / parameter equals
# E261 at least two spaces before inline comment
# W291 trailing whitespace
# W293 blank line contains whitespace
# E302 two blank lines between the functions
# E402 module level import not at top of file - temporary measure to coninue adding ros python packaged in sys.path
# E501 line too long (82 > 79 characters)
# E731 do not assign a lambda expression, use a def

# Do not run tests in the build folder or in the virtualenv folder `venv`.
norecursedirs=build venv venv_linux

addopts = --pep8 -v -x -s --cov=keras_datasets --cov-report=html --cov-config .coveragerc

pep8ignore=* E221 \
           * E241 \
           * E501 \
           * E402 \

#* E225 \
#* E226 \
#* E231 \
#* E251 \
#* E261
#* W291 \
#* W293 \
#* E302 \
#* E731 \
